update closure-compiler to v20250903